objects/Lead.object
<CustomObject>
    <fields>
        <fullName>CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desired_Loan_Amount__c</fullName>
        <label>Desired Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_this_a_Test__c</fullName>
        <inlineHelpText>Please denote if this is a Test Record.</inlineHelpText>
        <label>Is this a Test?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Status_Icon__c</fullName>
        <formula>IMAGE(CASE(Status, &quot;Qualified&quot;, &quot;/img/samples/light_green.gif&quot;, &quot;Contacted&quot;, &quot;/img/samples/light_yellow.gif&quot;, &quot;Open&quot;, &quot;/img/samples/light_yellow.gif&quot;, &quot;Unqualified&quot;, &quot;/img/samples/light_red.gif&quot;, &quot;/s.gif&quot;), &quot;status color&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Status Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Purpose__c</fullName>
        <label>Loan Purpose</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Related_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field should  not be on the layout. It is a custom field used in the custom Product Package Convert button.</inlineHelpText>
        <label>Related Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <recordTypes>
        <fullName>LLC_BI__Loan</fullName>
        <active>true</active>
        <businessProcess>LLC_BI__Treasury Management Lead</businessProcess>
        <description>Select for a New Loan Opportunity</description>
        <label>Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Treasury_Management</fullName>
        <active>true</active>
        <businessProcess>LLC_BI__Treasury Management Lead</businessProcess>
        <description>Select for a New Treasury Management Opportunity</description>
        <label>Treasury Management</label>
    </recordTypes>
</CustomObject>